--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "node-rest-client": "^2.0.1",
     "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
